# small3d-samples

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build-all-mingw.bat  build-all-vs.bat  build-all.bat  build-all.sh  gloom.icns
avoidthebug/: CMakeLists.txt  README.md
avoidthebug-android/: README.md  build.gradle
avoidthebug-android/app/: build.gradle
avoidthebug-android/app/src/main/cpp/: GameLogic.cpp  main.cpp
avoidthebug-android/gradle/wrapper/: gradle-wrapper.properties
avoidthebug-ios/: .gitignore
avoidthebug-ios/avoidthebug-ios/: GameLogic.cpp
avoidthebug/assets/: bug.blend  bug.blend1  goat.blend  goat.blend1  goatBB.blend  tree.blend  tree.blend1
avoidthebug/resources/models/: bug.glb  goat.glb  tree.glb
avoidthebug/src/: CMakeLists.txt  GameLogic.cpp  GameLogic.hpp
ball/: CMakeLists.txt  README.md
ball/src/: CMakeLists.txt  main.cpp
chasethegoat/: README.md
chasethegoat/src/: CMakeLists.txt  GameLogic.cpp
frogremixed/: CMakeLists.txt  README.md
frogremixed/assets/: carBB.blend  frogBB.blend
frogremixed/src/: CMakeLists.txt  Car.cpp  Frog.cpp  Plank.cpp  main.cpp
gloom/src/: CMakeLists.txt  Game.cpp
resources/: map.txt
serial-model-renderer/: CMakeLists.txt  CMakeLists.txt.bak  README.md
serial-model-renderer/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Enemy.hpp  Game.cpp  Game.hpp  KeyInput.hpp  Map.cpp  Map.hpp  main.cpp
